# BedrockMod

./: .gitignore  App.xaml  App.xaml.cs  ConsoleWindow.xaml  ConsoleWindow.xaml.cs  CreateImages.cs  InjectorBase.cs  MainWindow.xaml  MainWindow.xaml.cs  PebbleInjector.csproj  README.md
CustomDLL/: CMakeLists.txt  CMakePresets.json  README.md
CustomDLL/src/: PebbleCore.cpp  PebbleCore.h
CustomDLL/src/core/: GameBuild.cpp  GameBuild.h  PebblePatternScanner.cpp  PebblePatternScanner.h  PebblePatternScanner_Example.h  PebblePatternScanner_GithubLinks.cpp  PebblePatternScanner_GithubLinks.h  SignatureScanner.cpp  SignatureScanner.h
CustomDLL/src/cosmetics/: CosmeticRegistry.cpp  CosmeticRegistry.h
CustomDLL/src/game/: MinecraftEffectTypes.h
CustomDLL/src/hooks/: D3D12RenderHook.cpp  D3D12RenderHook.h  IHook.h
CustomDLL/src/modules/combat/: AutoArmorModule.cpp  AutoArmorModule.h  TriggerbotModule.cpp  TriggerbotModule.h
CustomDLL/src/modules/player/: AutoBreakModule.cpp  AutoBreakModule.h  AutoClickerModule.cpp  AutoClickerModule.h
CustomDLL/src/modules/render/: NightVisionModule.cpp  NightVisionModule.h  ZoomModule.cpp  ZoomModule.h
CustomDLL/src/ui/: ClientMenu.cpp  ClientMenu.h
CustomDLL/tests/: PebbleCoreLoadTest.cpp
CustomDLL/tools/: SignatureProbe.cpp
tools/: MemoryEditor.ps1
